[gd_scene load_steps=7 format=3 uid="uid://dd311usgrxc3q"]

[ext_resource type="Script" path="res://scenes/interactive_object.gd" id="1_e43uq"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="2_04dud"]
[ext_resource type="Texture2D" uid="uid://b07crf72wrfyp" path="res://assets/icons/apple.png" id="3_mtha3"]
[ext_resource type="AudioStream" uid="uid://dv0ynpbdgq7w7" path="res://assets/sfx/keys.wav" id="4_g0km8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dicft"]
resource_local_to_scene = true
shader = ExtResource("2_04dud")
shader_parameter/line_color = Vector4(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j25nd"]
size = Vector2(29.0849, 30.5)

[node name="InteractiveObject" type="Node2D"]
scale = Vector2(1.99416, 2)
script = ExtResource("1_e43uq")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_dicft")
texture = ExtResource("3_mtha3")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-3.58675e-07, -0.75)
shape = SubResource("RectangleShape2D_j25nd")

[node name="Label" type="Label" parent="."]
z_index = 3
offset_left = -19.0
offset_top = -28.0
offset_right = 68.0
offset_bottom = -5.0
scale = Vector2(0.438978, 0.438978)
size_flags_horizontal = 4
size_flags_vertical = 0
text = "item_name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_g0km8")

[connection signal="input_event" from="StaticBody2D" to="." method="_on_static_body_2d_input_event"]
[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_exited"]
